--- a/ExploreHttp/App.xaml
+++ b/ExploreHttp/App.xaml
@@ -38,6 +38,25 @@
             <sys:String x:Key="OpenIcon">&#xE188;</sys:String>
             <sys:String x:Key="ToggleDownIcon">&#x25BC;</sys:String>
             <sys:String x:Key="SaveIcon">&#xE105;</sys:String>
+            <sys:String x:Key="TrashIcon">&#xE107;</sys:String>
+
+            <RoutedCommand x:Key="{x:Static local:CommandNames.NewCollectionCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.OpenCollectionCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.SaveCollectionCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.EditCollectionCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.CloseCollectionCommandName}"/>
+
+            <RoutedCommand x:Key="{x:Static local:CommandNames.OpenRequestFromCollectionCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.CloseRequestCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.NewRequestCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.SaveRequestCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.DeleteRequestCommandName}"/>
+
+            <RoutedCommand x:Key="{x:Static local:CommandNames.RunRequestCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.ViewRequestLogsCommandName}"/>
+
+            <RoutedCommand x:Key="{x:Static local:CommandNames.OpenSettingsCommandName}"/>
+            <RoutedCommand x:Key="{x:Static local:CommandNames.AboutCommandName}"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
