--- a/ExploreHttp/RequestCollectionControl.xaml
+++ b/ExploreHttp/RequestCollectionControl.xaml
@@ -24,9 +24,9 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="24"/>
-                    <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="28"/>
@@ -37,23 +37,24 @@
                         <TextBlock Text="{StaticResource ExpandedIcon}" Style="{StaticResource Icons}" Visibility="{Binding IsExpanded, Converter={StaticResource BoolToVis}}" d:Visibility="Visible"/>
                     </StackPanel>
                 </Button>
-                <TextBlock Text="{StaticResource PendingChangesIcon}"
-                           Grid.Column="1"
-                           Style="{StaticResource Icons}"
-                           Margin="0,0,4,0"
-                           HorizontalAlignment="Center"
-                           ToolTip="There are unsaved changes"
-                           Visibility="{Binding UnsavedChangesIndicatorVisibility}"/>
-                <TextBlock Text="{Binding CollectionName}"
-                           d:Text="Example collection"
-                           VerticalAlignment="Center"
-                           Margin="4,0,4,0"
-                           Grid.Column="2"/>
+                <StackPanel Orientation="Horizontal"
+                            Grid.Column="1">
+                    <TextBlock Text="{StaticResource PendingChangesIcon}"
+                               Style="{StaticResource Icons}"
+                               Margin="0,0,4,0"
+                               HorizontalAlignment="Center"
+                               ToolTip="There are unsaved changes"
+                               Visibility="{Binding UnsavedChangesIndicatorVisibility}"/>
+                    <TextBlock Text="{Binding CollectionName}"
+                               d:Text="Example collection"
+                               VerticalAlignment="Center"
+                               Margin="4,0,4,0"/>
+                </StackPanel>
                 <ComboBox ItemsSource="{Binding SavedEnvironments}"
                           SelectedIndex="{Binding SelectedEnvironmentIndex}"
                           d:ItemsSource="{d:SampleData ItemCount=3}"
                           d:SelectedIndex="1"
-                          Grid.Column="3"
+                          Grid.Column="2"
                           VerticalAlignment="Center"
                           Margin="0,0,4,0"
                           ToolTip="Active Environment">
@@ -63,33 +64,65 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <Button Grid.Column="4" Margin="0,0,4,0" ToolTip="New Request" Click="NewRequest_Click">
+                <Button Grid.Column="3"
+                        Margin="0,0,4,0"
+                        ToolTip="New Request"
+                        Command="{StaticResource {x:Static local:CommandNames.NewRequestCommandName}}"
+                        CommandParameter="{Binding}">
                     <TextBlock Text="{StaticResource FileIcon}" Style="{StaticResource Icons}"/>
                 </Button>
-                <Button Grid.Column="5" Margin="0,0,4,0" ToolTip="Collection Settings" Click="EditCollection_Click">
+                <Button Grid.Column="4" Margin="0,0,4,0" ToolTip="Collection Settings"
+                        Command="{StaticResource {x:Static local:CommandNames.EditCollectionCommandName}}"
+                        CommandParameter="{Binding}">
                     <TextBlock Text="{StaticResource EditIcon}"
                                Style="{StaticResource Icons}"
                                FontSize="12"/>
                 </Button>
-                <Button Grid.Column="6" ToolTip="Save Changes" Click="SaveCollection_Click">
+                <Button Grid.Column="5" Margin="0,0,4,0" ToolTip="Save Changes"
+                        Command="{StaticResource {x:Static local:CommandNames.SaveCollectionCommandName}}"
+                        CommandParameter="{Binding}">
                     <TextBlock Text="{StaticResource SaveIcon}"
                                Style="{StaticResource Icons}"
                                FontSize="12"/>
                 </Button>
+                <Button Grid.Column="6" ToolTip="Close Collection"
+                        Command="{StaticResource {x:Static local:CommandNames.CloseCollectionCommandName}}"
+                        CommandParameter="{Binding}">
+                    <TextBlock Text="{StaticResource TrashIcon}" Style="{StaticResource Icons}" FontSize="12"/>
+                </Button>
             </Grid>
             <StackPanel Visibility="{Binding IsExpanded, Converter={StaticResource BoolToVis}}">
-                <ItemsControl ItemsSource="{Binding SavedRequests}"
+                <ItemsControl x:Name="requestList" ItemsSource="{Binding SavedRequests}"
                   d:ItemsSource="{d:SampleData ItemCount=5}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Button HorizontalContentAlignment="Left" Margin="0,4,0,0">
-                                <StackPanel Orientation="Horizontal">
-                                    <Border Style="{StaticResource Pill}" Width="50" Background="{Binding Method, Converter={StaticResource MethodConverter}}">
-                                        <TextBlock Text="{Binding Method}" FontWeight="Bold" FontSize="10" HorizontalAlignment="Center"/>
-                                    </Border>
-                                    <TextBlock Text="{Binding Name}" ToolTip="{Binding Url}" VerticalAlignment="Center" TextDecorations="Underline"/>
-                                </StackPanel>
-                            </Button>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="36"/>
+                                </Grid.ColumnDefinitions>
+                                <Button HorizontalContentAlignment="Left" Margin="0,4,0,0"
+                                        Command="{StaticResource {x:Static local:CommandNames.OpenRequestFromCollectionCommandName}}"
+                                        CommandParameter="{Binding}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border Style="{StaticResource Pill}"
+                                                Width="50"
+                                                Background="{Binding Method, Converter={StaticResource MethodConverter}}">
+                                            <TextBlock Text="{Binding Method}" FontWeight="Bold" FontSize="10" HorizontalAlignment="Center"/>
+                                        </Border>
+                                        <TextBlock Text="{Binding Name}"
+                                                   ToolTip="{Binding Url}"
+                                                   VerticalAlignment="Center"
+                                                   TextDecorations="Underline"/>
+                                    </StackPanel>
+                                </Button>
+                                <Button Command="{StaticResource {x:Static local:CommandNames.DeleteRequestCommandName}}"
+                                        CommandParameter="{Binding}"
+                                        Margin="4,4,0,0"
+                                        Grid.Column="1">
+                                    <TextBlock Text="{StaticResource TrashIcon}" Style="{StaticResource Icons}"/>
+                                </Button>
+                            </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
