--- a/ExploreHttp/CollectionEditorWindow.xaml
+++ b/ExploreHttp/CollectionEditorWindow.xaml
@@ -12,10 +12,22 @@
         WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance Type=vm:RequestCollection}">
     <Window.Resources>
-        <x:Array x:Key="AllKinds" Type="vm:CollectionKind">
-            <vm:CollectionKind>Manual</vm:CollectionKind>
-            <vm:CollectionKind>OpenApi</vm:CollectionKind>
-        </x:Array>
+        <ResourceDictionary>
+            <Style x:Key="HideWhenNotOpenApi" TargetType="StackPanel">
+                <Style.Triggers>
+                    <DataTrigger Value="Manual" Binding="{Binding DataContext.Kind, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CollectionEditorWindow}}}">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+            <Style x:Key="DisableWhenNotOpenApi" TargetType="TextBox">
+                <Style.Triggers>
+                    <DataTrigger Value="Manual" Binding="{Binding DataContext.Kind, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:CollectionEditorWindow}}}">
+                        <Setter Property="IsEnabled" Value="False"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </ResourceDictionary>
     </Window.Resources>
     <Grid Margin="4">
         <Grid.RowDefinitions>
@@ -31,14 +43,20 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="Name:" VerticalAlignment="Center"/>
         <TextBox Grid.Column="1" Text="{Binding CollectionName}" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-        <TextBlock Text="Kind:" VerticalAlignment="Center" Grid.Row="1"/>
-        <ComboBox ItemsSource="{StaticResource AllKinds}" SelectedItem="{Binding Kind}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
+        <TextBlock Text="Source:" VerticalAlignment="Center" Grid.Row="1"/>
+        <TextBox Text="{Binding Source}" Style="{StaticResource DisableWhenNotOpenApi}" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1"/>
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Grid.Column="2" Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Style="{StaticResource HideWhenNotOpenApi}">
+            <Button Margin="4,0" Click="ChangeSource_Click">
+                <TextBlock Text="{StaticResource ElipsisIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
+            </Button>
+            <Button Click="RefreshEndpoints_Click">
+                <TextBlock Text="{StaticResource RefreshIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
+            </Button>
+        </StackPanel>
         <GroupBox Header="Environments" Grid.Row="2" Grid.ColumnSpan="3">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
                 <StackPanel>
@@ -50,10 +68,18 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="32"/>
+                                        <ColumnDefinition Width="32"/>
+                                        <ColumnDefinition Width="32"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="{Binding Name}" FontSize="14" Margin="2" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
                                     <Button Click="EditEnvironment_Click" Grid.Column="1" Margin="2">
                                         <TextBlock Text="{StaticResource EditIcon}" Style="{StaticResource Icons}"/>
+                                    </Button>
+                                    <Button Grid.Column="2" Margin="2" Click="DuplicateEnvironment_Click">
+                                        <TextBlock Text="{StaticResource DuplicateIcon}" Style="{StaticResource Icons}"/>
+                                    </Button>
+                                    <Button Grid.Column="3" Margin="2" Click="DeleteEnvironment_Click">
+                                        <TextBlock Text="{StaticResource TrashIcon}" Style="{StaticResource Icons}"/>
                                     </Button>
                                 </Grid>
                             </DataTemplate>
