--- a/ExploreHttp/ImportOpenApiWindow.xaml
+++ b/ExploreHttp/ImportOpenApiWindow.xaml
@@ -4,22 +4,31 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExploreHttp"
+        xmlns:vm="clr-namespace:ExploreHttp.Models"
         xmlns:c="clr-namespace:ExploreHttp.Utilities"
         mc:Ignorable="d"
         Title="Explore HTTP - Import OpenAPI"
         Height="450"
         Width="600"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        d:DataContext="{d:DesignInstance Type=vm:OpenApiImportResult}">
     <Window.Resources>
         <ResourceDictionary>
             <c:MethodToColorBrushConverter x:Key="MethodConverter"
                                IdempotentBrush="{StaticResource IdempotentOperation}"
                                NonIdempotentBrush="{StaticResource NonIdempotentOperation}"
                                DangerousBrush="{StaticResource DangerousOperation}"/>
+            <x:Array x:Key="AllImportOptions" Type="vm:OpenApiImportAction">
+                <vm:OpenApiImportAction>All</vm:OpenApiImportAction>
+                <vm:OpenApiImportAction>New</vm:OpenApiImportAction>
+                <vm:OpenApiImportAction>Custom</vm:OpenApiImportAction>
+            </x:Array>
+            <c:NoContentToVisibilityConverter x:Key="HideImportOptionsWhenNotOverriding" DefaultOrSimilarMap="Collapsed" NonDefaultOrSimilarMap="Visible"/>
         </ResourceDictionary>
     </Window.Resources>
     <Grid Margin="8">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="32"/>
@@ -33,20 +42,34 @@
         <local:TextBoxWithPlaceholder Grid.Column="1"
                                       Placeholder="File or url"
                                       VerticalAlignment="Center"
-                                      Text="{Binding ApiLocation, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:ImportOpenApiWindow}}}"/>
+                                      Text="{Binding DocumentLocation}"/>
         <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
-            <Button Click="OpenLocalFile_Click">
+            <Button Click="OpenLocalFile_Click" ToolTip="Open local file">
                 <TextBlock Text="{StaticResource ElipsisIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
             </Button>
-            <Button Margin="4,0,0,0" Click="RunImportPreview_Click">
+            <Button Margin="4,0,0,0" Click="RunImportPreview_Click" ToolTip="Preview endpoints">
                 <TextBlock Text="{StaticResource ImportIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
             </Button>
         </StackPanel>
-        <GroupBox Grid.ColumnSpan="3" Margin="0,4,0,4" Grid.Row="1" Header="Endpoint Preview">
+        <TextBlock Text="Import endpoints:"
+                   Grid.Row="1"
+                   VerticalAlignment="Center"
+                   Margin="0,4"
+                   Visibility="{Binding OriginalCollection, Converter={StaticResource HideImportOptionsWhenNotOverriding}}"/>
+        <ComboBox Grid.Row="1"
+                  Grid.Column="1"
+                  Grid.ColumnSpan="2"
+                  VerticalAlignment="Center"
+                  Margin="0,4"
+                  ItemsSource="{StaticResource AllImportOptions}"
+                  SelectedItem="{Binding ImportOptions}"
+                  Visibility="{Binding OriginalCollection, Converter={StaticResource HideImportOptionsWhenNotOverriding}}">
+        </ComboBox>
+        <GroupBox Grid.ColumnSpan="3" Margin="0,4,0,4" Grid.Row="2" Header="Endpoint Preview">
             <ScrollViewer
                 HorizontalScrollBarVisibility="Disabled">
                 <ItemsControl
-                    ItemsSource="{Binding Endpoints, RelativeSource={RelativeSource AncestorType={x:Type local:ImportOpenApiWindow}, Mode=FindAncestor}}"
+                    ItemsSource="{Binding Collection.SavedRequests}"
                     d:ItemsSource="{d:SampleData ItemCount=5}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
@@ -68,13 +91,13 @@
                 </ItemsControl>
             </ScrollViewer>
         </GroupBox>
-        <Button Grid.Row="2" Width="80" HorizontalAlignment="Left" Click="Ok_Click">
+        <Button Grid.Row="3" Width="80" HorizontalAlignment="Left" Click="Ok_Click">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{StaticResource SaveIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
                 <TextBlock Text="Save" VerticalAlignment="Center"/>
             </StackPanel>
         </Button>
-        <Button Grid.Row="2" Grid.Column="2" Click="Cancel_Click">
+        <Button Grid.Row="3" Grid.Column="2" Click="Cancel_Click">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{StaticResource CloseIcon}" Style="{StaticResource Icons}" VerticalAlignment="Center"/>
                 <TextBlock Text="Cancel" VerticalAlignment="Center"/>
