some hardening and bug fixing, refactoring and cleanup of reimport

--- a/ExploreHttp/AboutWindow.xaml
+++ b/ExploreHttp/AboutWindow.xaml
@@ -20,7 +20,7 @@
         <TextBlock TextWrapping="WrapWithOverflow"
                    Margin="0,8"
                    TextAlignment="Justify"
-                   Text="This program is a result of desire to move away from popular heavy tools for simple http request experiments and API tests. Design goals for it are to remain simple and easy to adopt and tinker with while keeping everything in local file system. This tool is not designed to be a performance testing tool. For that use case use some other solution."/>
+                   Text="This program is a result of desire to move away from popular heavy tools for simple http request experiments and API tests. Design goal for it id to remain simple and easy to adopt and tinker with while keeping everything in local file system. This tool is not designed to be a performance testing tool. For that use case use some other solution."/>
         <TextBlock Text="Copyright © 2023 - Dalibor Takač, released under MIT licence" Grid.Row="1" VerticalAlignment="Center"/>
         <StackPanel Orientation="Horizontal" Grid.Row="2" VerticalAlignment="Center" Margin="0,8">
             <TextBlock Text="Source available at: "/>
